--- a/app/src/main/res/layout/acitivity_ipc.xml
+++ b/app/src/main/res/layout/acitivity_ipc.xml
@@ -45,7 +45,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:text="unaidl" />
+            android:text="unbind" />
 
     </LinearLayout>
 
