--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,13 @@
             android:layout_height="wrap_content"
             android:text="sqlite"
             />
+
+        <Button
+            android:id="@+id/asynctask"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Asynctask"
+            />
         <Button
             android:id="@+id/jni"
             android:layout_width="match_parent"
