--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,6 +65,13 @@
             android:text="IPC"
             />
 
+        <Button
+            android:id="@+id/geasure"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="GEASURE"
+            />
+
 
 
 
